done mobile menu

--- a/public/14-search-2.html
+++ b/public/14-search-2.html
@@ -5,6 +5,23 @@
 		<title>Результаты поиска по тегу «Корпоративный стиль»</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+		<script>
+			let viewport = document.querySelector("meta[name=viewport]");
+			var is_safari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
+			
+				//- alert(navigator.userAgent);
+				function w() {
+					this.outerWidth > 767.98 
+						? viewport.content = "width=1200,   maximum-scale=1 , user-scalable=0, shrink-to-fit=no" 
+						: viewport.content = "width=device-width, initial-scale=1.0,  maximum-scale=1.0, user-scalable=0, shrink-to-fit=no" 
+					//- alert(this.outerWidth + ', '+  viewport.content);
+				}
+					w();
+				window.addEventListener('resize', () => { 
+					w();
+				}, { passive: true });
+		</script>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> 
 		<link href="libs/swiper/swiper.min.css" rel="stylesheet"/>
@@ -16,7 +33,7 @@
 			<!-- start top-nav-->
 			<div class="top-nav block-with-lazy">
 				<div class="container-fluid">
-					<div class="row">
+					<div class="top-nav__row row">
 						<div class="col-auto">
 							<a class="logo-link" href="/"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g clip-path="url(#clip0_2312_2263)">
@@ -33,128 +50,78 @@
 </svg>
 							</a>
 						</div>
-						<div class="top-nav__col-main col">
-							<div class="row">
-								<div class="col-auto">
-									<div class="menu-mobile menu-mobile--js">
-										<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
+						<div class="col">
+							<div class="menu-mobile menu-mobile--js">
+								<div class="menu-mobile__inner">
+									<div class="top-nav__row-mobile row">
+										<div class="col-lg-auto">
+											<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
+												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
+												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
+												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
+												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
+												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+											</ul>
 										</div>
-										<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
-											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
-											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
-											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
-											<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
-										</ul>
-									</div>
-								</div>
-								<div class="col">
-									<div class="search-block">
-										<div class="search-block__btn search-block__btn--show search-block__btn--js">
-											<svg class="icon icon-search2 ">
-												<use xlink:href="img/svg/sprite.svg#search2"></use>
-											</svg>
-										</div>
-										<div class="search-block__hidden-block">
-											<form>
-												<div class="search-block__input-wrap form-group"><input class="search-block__input form-control" name="text" type="text" placeholder="Поиск"/>
+										<div class="col-lg order-lg-0 order-last">
+											<div class="search-block">
+												<div class="search-block__btn search-block__btn--show search-block__btn--js d-none d-lg-block">
+													<svg class="icon icon-search2 ">
+														<use xlink:href="img/svg/sprite.svg#search2"></use>
+													</svg>
 												</div>
-												<!-- +e.input-wrap-->
-											</form>
-											<div class="search-block__btn search-block__btn--close search-block__btn--js">
-												<svg class="icon icon-close ">
-													<use xlink:href="img/svg/sprite.svg#close"></use>
-												</svg>
-											</div>
-										</div>
-									</div>
-									<div class="search-result"> 
-										<div class="search-result__group">
-											<div class="search-result__btns row">
-												<div class="col-auto">
-													<a class="search-result__btn btn-gray" href="#">Новости
-													</a>
-												</div>
-												<div class="col-auto">
-													<a class="search-result__btn btn-gray" href="#">Немолоко
-													</a>
-												</div>
-												<div class="col-auto">
-													<a class="search-result__btn btn-gray" href="#">Награды
-													</a>
+												<div class="search-block__hidden-block">
+													<form>
+														<div class="search-block__input-wrap form-group"><input class="search-block__input form-control" name="text" type="text" placeholder="Поиск"/>
+														</div>
+														<!-- +e.input-wrap-->
+														<button class="search-block__btn d-lg-none" type="submit">
+															<svg class="icon icon-search2 ">
+																<use xlink:href="img/svg/sprite.svg#search2"></use>
+															</svg>
+														</button>
+													</form>
+													<div class="search-block__btn search-block__btn--close search-block__btn--js d-none d-lg-block">
+														<svg class="icon icon-close ">
+															<use xlink:href="img/svg/sprite.svg#close"></use>
+														</svg>
+													</div>
 												</div>
 											</div>
 										</div>
-										<div class="search-result__group">
-											<div class="search-result__title">Услуги
-											</div>
-											<div class="col">
-												<ul class="services-list">
-													<li class="services-list__item">
-														<a class="services-list__link" href="#">Стратегия 
-														</a>
-													</li>
-													<li class="services-list__item">
-														<a class="services-list__link" href="#">Продвижение
-														</a>
-													</li>
-													<li class="services-list__item">
-														<a class="services-list__link" href="#">Потребительский брендинг
-														</a>
-													</li>
-												</ul>
-											</div>
+										<div class="top-nav__col-mail col-lg-auto"><a href="mailto:info@ddvb.ru">info@ddvb.ru </a>
 										</div>
-										<div class="search-result__group">
-											<div class="search-result__title">Портфолио
-											</div>
+										<div class="col-lg-auto order-lg-last">
+											<a class="top-nav__btn" href="#">Оставить заявку
+											</a>
 										</div>
-										<div class="search-result__group">
-											<div class="search-result__title">Новости
-											</div>
-											<div class="mb-2">
-												<a class="search-result__link text-body" href="#">Nemoloko выводит на рынок новые линейки <span class="text-secondary-light">/ 12 января</span>
+										<div class="col-lg-auto">
+											<div class="soc">
+												<a class="soc__item" href="#" target="_blank">
+													<svg class="icon icon-youtube ">
+														<use xlink:href="img/svg/sprite.svg#youtube"></use>
+													</svg>
+												</a>
+												<a class="soc__item" href="#" target="_blank">
+													<svg class="icon icon-instagram2 ">
+														<use xlink:href="img/svg/sprite.svg#instagram2"></use>
+													</svg>
+												</a>
+												<a class="soc__item" href="#" target="_blank">
+													<svg class="icon icon-facebook ">
+														<use xlink:href="img/svg/sprite.svg#facebook"></use>
+													</svg>
+												</a>
+												<a class="soc__item" href="#" target="_blank">
+													<svg class="icon icon-behance ">
+														<use xlink:href="img/svg/sprite.svg#behance"></use>
+													</svg>
 												</a>
 											</div>
-											<div class="mb-2">
-												<a class="search-result__link text-body" href="#">Это вам – Nemoloko! Новая категория! Новый бренд! <span class="text-secondary-light">/ 16 января</span>
-												</a>
-											</div>
-										</div>
-										<div class="search-result__footer"> 
 										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-auto"><a href="mailto:info@ddvb.ru">info@ddvb.ru </a></div>
-						<div class="col-auto">
-							<div class="soc">
-								<a class="soc__item" href="#" target="_blank">
-									<svg class="icon icon-youtube ">
-										<use xlink:href="img/svg/sprite.svg#youtube"></use>
-									</svg>
-								</a>
-								<a class="soc__item" href="#" target="_blank">
-									<svg class="icon icon-instagram2 ">
-										<use xlink:href="img/svg/sprite.svg#instagram2"></use>
-									</svg>
-								</a>
-								<a class="soc__item" href="#" target="_blank">
-									<svg class="icon icon-facebook ">
-										<use xlink:href="img/svg/sprite.svg#facebook"></use>
-									</svg>
-								</a>
-								<a class="soc__item" href="#" target="_blank">
-									<svg class="icon icon-behance ">
-										<use xlink:href="img/svg/sprite.svg#behance"></use>
-									</svg>
-								</a>
-							</div>
-						</div>
-						<div class="col-auto">
-							<a class="top-nav__btn" href="#">Оставить заявку
-							</a>
 						</div>
 						<div class="col-auto d-lg-none">
 							<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
