--- a/public/13-contacts.html
+++ b/public/13-contacts.html
@@ -121,8 +121,13 @@
 												</a>
 											</div>
 										</div>
-										<div class="search-result__footer"> 
-										</div>
+										<a class="more-link" href="#">
+											<div class="more-link__btn">
+												<svg class="icon icon-chevron-right-btn ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+												</svg>
+											</div>Все результаты поиска
+										</a>
 									</div>
 								</div>
 							</div>
