--- a/public/09-about-company-5.html
+++ b/public/09-about-company-5.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Результаты поиска по тегу «Корпоративный стиль»</title>
+		<title>Команда</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -133,261 +133,103 @@
 			<!-- end top-nav-->
 			<div class="page-head"> 
 				<div class="container">
-					<h1>Результаты поиска по тегу «Корпоративный стиль»</h1>
+					<h1>Команда</h1>
 				</div>
 			</div>
-			<div class="form-block">
+			<!-- start sHistory-->
+			<section class="sHistory section" id="sHistory">
 				<div class="container">
-					<form class="form-block__search">
-						<p>12 результатов</p>
-					</form>
+					<div class="head-wrapper">
+						<div class="row"> 
+							<div class="head-wrapper__col col-lg-6">
+								<h2>Придаём брендам человеческое лицо,</h2>
+								<p>помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей</p>
+							</div>
+							<div class="col-lg-6">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+					</div>
+					<p>DDVB насчитывает более 150 наград престижных конкурсов в&nbsp;области брендинга, дизайна и&nbsp;рекламы, а&nbsp;также ряда публикаций в&nbsp;профильных зарубежных СМИ.</p>
+				</div>
+			</section>
+			<!-- end sHistory-->
+			<!-- start sPorfolioSlider-->
+			<div class="sPorfolioSlider section" id="sPorfolioSlider">
+				<div class="container-wide">
+					<div class="sPorfolioSlider__sliderContainer">
+						<div class="sPorfolioSlider__slider sPorfolioSlider__slider--js swiper">
+							<div class="swiper-wrapper">
+									<div class="sPorfolioSlider__slide swiper-slide">
+										<div class="sPorfolioSlider__item">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/content-img-3.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/content-img-3.webp"/><img class="object-fit-js" src="img/@2x/content-img-3.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+										</div>
+									</div>
+									<div class="sPorfolioSlider__slide swiper-slide">
+										<div class="sPorfolioSlider__item">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/content-img-3.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/content-img-3.webp"/><img class="object-fit-js" src="img/@2x/content-img-3.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+										</div>
+									</div>
+									<div class="sPorfolioSlider__slide swiper-slide">
+										<div class="sPorfolioSlider__item">
+											<!-- picture-->
+											<picture> 
+												<source type="image/avif" srcset="img/@2x/avif/content-img-3.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/content-img-3.webp"/><img class="object-fit-js" src="img/@2x/content-img-3.jpg" alt="" loading="lazy"/>
+											</picture>
+											<!-- /picture-->
+										</div>
+									</div>
+							</div>
+						</div>
+						<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+							<svg class="icon icon-chevron-left-btn ">
+								<use xlink:href="img/svg/sprite.svg#chevron-left-btn"></use>
+							</svg>
+						</div>
+						<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+							<svg class="icon icon-chevron-right-btn ">
+								<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+							</svg>
+						</div>
+						<div class="swiper-pagination"></div>
+					</div>
 				</div>
 			</div>
+			<!-- end sPorfolioSlider-->
 			<!-- start sCard-->
-			<div class="sCard section" id="sCard">
+			<div class="sCard section sCard sCard--portfolio" id="sCard">
 				<div class="container-wide">
 					<div class="row">
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
+						<div class="col-md-12">
+							<div class="cardWrrap cardWrrap--horizontal">
 								<div class="cardWrrap__content">
-									<h2>Valio. Выбери цвет настроения!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">1
+									<h2>Хочешь стать частью команды?</h2>
+									<button class="cardWrrap__btn">Оставить заявку
 									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/main-bg.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/main-bg.webp"/><img class="object-fit-js" src="img/@2x/main-bg.jpg" alt="" loading="lazy"/>
+									<source type="image/avif" srcset="img/@2x/avif/portfolio-bg-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/portfolio-bg-1.webp"/><img class="object-fit-js" src="img/@2x/portfolio-bg-1.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">2
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/main-bg-3.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/main-bg-3.webp"/><img class="object-fit-js" src="img/@2x/main-bg-3.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Корпоративный брендинг</span>
-									<button class="cardWrrap__btn">3
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-7.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-7.webp"/><img class="object-fit-js" src="img/@2x/card-bg-7.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search text-white">
-								<div class="cardWrrap__content">
-									<h2>Valio. Выбери цвет настроения!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">4
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-8.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-8.webp"/><img class="object-fit-js" src="img/@2x/card-bg-8.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">2
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/main-bg-3.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/main-bg-3.webp"/><img class="object-fit-js" src="img/@2x/main-bg-3.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Корпоративный брендинг</span>
-									<button class="cardWrrap__btn">6
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-9.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-9.webp"/><img class="object-fit-js" src="img/@2x/card-bg-9.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Корпоративный брендинг</span>
-									<button class="cardWrrap__btn">3
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-7.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-7.webp"/><img class="object-fit-js" src="img/@2x/card-bg-7.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Корпоративный брендинг</span>
-									<button class="cardWrrap__btn">2
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/main-bg.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/main-bg.webp"/><img class="object-fit-js" src="img/@2x/main-bg.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Valio. Выбери цвет настроения!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">1
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/main-bg.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/main-bg.webp"/><img class="object-fit-js" src="img/@2x/main-bg.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">2
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/main-bg-3.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/main-bg-3.webp"/><img class="object-fit-js" src="img/@2x/main-bg-3.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search text-white">
-								<div class="cardWrrap__content">
-									<h2>Valio. Выбери цвет настроения!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">4
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-8.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-8.webp"/><img class="object-fit-js" src="img/@2x/card-bg-8.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">3
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-7.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-7.webp"/><img class="object-fit-js" src="img/@2x/card-bg-7.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">2
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/main-bg-3.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/main-bg-3.webp"/><img class="object-fit-js" src="img/@2x/main-bg-3.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">6
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-9.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-9.webp"/><img class="object-fit-js" src="img/@2x/card-bg-9.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">3
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-7.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-7.webp"/><img class="object-fit-js" src="img/@2x/card-bg-7.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
-								<div class="cardWrrap__content">
-									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">1
-									</button>
-								</div>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/main-bg.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/main-bg.webp"/><img class="object-fit-js" src="img/@2x/main-bg.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</div>
-						</div>
-						<div class="spinner">
 						</div>
 					</div>
 				</div>
