--- a/public/09-about-company.html
+++ b/public/09-about-company.html
@@ -173,144 +173,146 @@
 					<p>DDVB насчитывает более 150 наград престижных конкурсов в&nbsp;области брендинга, дизайна и&nbsp;рекламы, а&nbsp;также ряда публикаций в&nbsp;профильных зарубежных СМИ.</p>
 				</div>
 				<div class="container-wide">
-					<ul class="sAwards__company-list">
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-1.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-1.webp"/><img src="img/@2x/awards-img-1.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-2.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-2.webp"/><img src="img/@2x/awards-img-2.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-3.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-3.webp"/><img src="img/@2x/awards-img-3.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-4.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-4.webp"/><img src="img/@2x/awards-img-4.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-5.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-5.webp"/><img src="img/@2x/awards-img-5.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-6.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-6.webp"/><img src="img/@2x/awards-img-6.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-7.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-7.webp"/><img src="img/@2x/awards-img-7.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-8.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-8.webp"/><img src="img/@2x/awards-img-8.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-9.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-9.webp"/><img src="img/@2x/awards-img-9.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-10.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-10.webp"/><img src="img/@2x/awards-img-10.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-11.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-11.webp"/><img src="img/@2x/awards-img-11.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-12.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-12.webp"/><img src="img/@2x/awards-img-12.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-13.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-13.webp"/><img src="img/@2x/awards-img-13.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-14.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-14.webp"/><img src="img/@2x/awards-img-14.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-15.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-15.webp"/><img src="img/@2x/awards-img-15.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-16.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-16.webp"/><img src="img/@2x/awards-img-16.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-						<li class="sAwards__item"> 
-							<!-- picture-->
-							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/awards-img-17.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/awards-img-17.webp"/><img src="img/@2x/awards-img-17.jpg" alt="" loading="lazy"/>
-							</picture>
-							<!-- /picture-->
-						</li>
-					</ul>
+					<div class="container">
+						<ul class="sAwards__company-list">
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-1.webp"/><img src="img/@2x/awards-img-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-2.webp"/><img src="img/@2x/awards-img-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-3.webp"/><img src="img/@2x/awards-img-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-4.webp"/><img src="img/@2x/awards-img-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-5.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-5.webp"/><img src="img/@2x/awards-img-5.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-6.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-6.webp"/><img src="img/@2x/awards-img-6.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-7.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-7.webp"/><img src="img/@2x/awards-img-7.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-8.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-8.webp"/><img src="img/@2x/awards-img-8.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-9.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-9.webp"/><img src="img/@2x/awards-img-9.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-10.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-10.webp"/><img src="img/@2x/awards-img-10.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-11.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-11.webp"/><img src="img/@2x/awards-img-11.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-12.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-12.webp"/><img src="img/@2x/awards-img-12.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-13.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-13.webp"/><img src="img/@2x/awards-img-13.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-14.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-14.webp"/><img src="img/@2x/awards-img-14.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-15.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-15.webp"/><img src="img/@2x/awards-img-15.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-16.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-16.webp"/><img src="img/@2x/awards-img-16.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+							<li class="sAwards__item"> 
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/awards-img-17.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/awards-img-17.webp"/><img src="img/@2x/awards-img-17.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<!-- end sAwards-->
