--- a/public/14-search.html
+++ b/public/14-search.html
@@ -381,7 +381,7 @@
 			</div>
 			<!-- end sCard-->
 			<footer class="footer">
-				<div class="container">
+				<div class="container-wide">
 					<div class="row">
 						<div class="col-auto col-lg-2 col-logo">
 							<a class="logo-link" href="/"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -422,8 +422,8 @@
 						<div class="col-12 col-lg-3 col-adress">
 							<ul class="footer__adress">
 								<li><span>Москва, ул. Земляной вал, д. 46, офис 41</span></li>
-								<li> <a href="mailto: info@ddvb.ru">info@ddvb.ru</a></li>
-								<li> <a href="tel: +74959160123">+7 (495) 916-01-23</a></li>
+								<li> <a href="mailto:info@ddvb.ru">info@ddvb.ru</a></li>
+								<li> <a href="tel:+74959160123">+7 (495) 916-01-23</a></li>
 							</ul>
 						</div>
 						<div class="col-12 col-lg-6 col-policy">
