--- a/public/index.html
+++ b/public/index.html
@@ -318,12 +318,10 @@
 								<!-- /picture-->
 							</div>
 						</div>
-					</div>
-					<div class="btn-more" href="#">
+					</div><a class="btn-more" href="#">
 						<svg class="icon icon-chevron-right-btn ">
 							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
-						</svg><span>Все работы</span>
-					</div>
+						</svg><span>Все работы</span></a>
 				</div>
 			</div>
 			<!-- end sCard-->
@@ -360,17 +358,15 @@
 								</div>
 							</a>
 						</div>
-					</div>
-					<div class="btn-more" href="#">
+					</div><a class="btn-more" href="#">
 						<svg class="icon icon-chevron-right-btn ">
 							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
-						</svg><span>Ещё новости</span>
-					</div>
+						</svg><span>Ещё новости</span></a>
 				</div>
 			</div>
 			<!-- end sNews-->
 			<footer class="footer">
-				<div class="container">
+				<div class="container-wide">
 					<div class="row">
 						<div class="col-auto col-lg-2 col-logo">
 							<a class="logo-link" href="/"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -411,8 +407,8 @@
 						<div class="col-12 col-lg-3 col-adress">
 							<ul class="footer__adress">
 								<li><span>Москва, ул. Земляной вал, д. 46, офис 41</span></li>
-								<li> <a href="mailto: info@ddvb.ru">info@ddvb.ru</a></li>
-								<li> <a href="tel: +74959160123">+7 (495) 916-01-23</a></li>
+								<li> <a href="mailto:info@ddvb.ru">info@ddvb.ru</a></li>
+								<li> <a href="tel:+74959160123">+7 (495) 916-01-23</a></li>
 							</ul>
 						</div>
 						<div class="col-12 col-lg-6 col-policy">
