--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -272,7 +272,6 @@
 						<div class="col-md-6">
 							<div class="cardWrrap">
 								<div class="cardWrrap__content">
-									<h2></h2>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -285,7 +284,6 @@
 						<div class="col-md-6"> 
 							<div class="cardWrrap">
 								<div class="cardWrrap__content">
-									<h2></h2>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -298,7 +296,6 @@
 						<div class="col-md-12">
 							<div class="cardWrrap cardWrrap--horizontal">
 								<div class="cardWrrap__content">
-									<h2></h2>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -320,7 +317,7 @@
 				</div>
 				<div class="container-wide">
 					<div class="video-wrrpaer">
-						<iframe src="https://www.youtube.com/embed/L_LUpnjgPso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+						<iframe src="https://www.youtube.com/embed/L_LUpnjgPso" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 					</div>
 				</div>
 			</div>
@@ -354,7 +351,6 @@
 						<div class="col-md-6">
 							<div class="cardWrrap">
 								<div class="cardWrrap__content">
-									<h2></h2>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -367,7 +363,6 @@
 						<div class="col-md-6"> 
 							<div class="cardWrrap">
 								<div class="cardWrrap__content">
-									<h2></h2>
 								</div>
 								<!-- picture-->
 								<picture> 
