--- a/public/08-portfolio.html
+++ b/public/08-portfolio.html
@@ -209,18 +209,18 @@
 								</svg>
 							</button>
 							<div class="dropdown-menu" id="dropdown-menu">
-								<div class="dropdown-item" href="#">Напитки</div>
-								<div class="dropdown-item" href="#">Мясные продукты</div>
-								<div class="dropdown-item" href="#">Молочные и НЕмолочные продукты</div>
-								<div class="dropdown-item" href="#">Бакалея и кондитерские изделия</div>
-								<div class="dropdown-item" href="#">Фармацевтика</div>
-								<div class="dropdown-item" href="#">Дети и здоровье</div>
-								<div class="dropdown-item" href="#">Финансы и девелопмент</div>
-								<div class="dropdown-item" href="#">Государственные организации и программы</div>
-								<div class="dropdown-item" href="#">Технологии</div>
-								<div class="dropdown-item" href="#">Товары и услуги для детей</div>
-								<div class="dropdown-item" href="#">Бытовая химия и товары для дома</div>
-								<div class="dropdown-item" href="#">Социально значимые проекты и госпрограммы</div>
+								<div class="dropdown-item">Напитки</div>
+								<div class="dropdown-item">Мясные продукты</div>
+								<div class="dropdown-item">Молочные и НЕмолочные продукты</div>
+								<div class="dropdown-item">Бакалея и кондитерские изделия</div>
+								<div class="dropdown-item">Фармацевтика</div>
+								<div class="dropdown-item">Дети и здоровье</div>
+								<div class="dropdown-item">Финансы и девелопмент</div>
+								<div class="dropdown-item">Государственные организации и программы</div>
+								<div class="dropdown-item">Технологии</div>
+								<div class="dropdown-item">Товары и услуги для детей</div>
+								<div class="dropdown-item">Бытовая химия и товары для дома</div>
+								<div class="dropdown-item">Социально значимые проекты и госпрограммы</div>
 							</div>
 						</div>
 					</div>
