--- a/public/09-about-company-5.html
+++ b/public/09-about-company-5.html
@@ -137,7 +137,7 @@
 				</div>
 			</div>
 			<!-- start sHistory-->
-			<section class="sHistory section" id="sHistory">
+			<div class="sHistory section" id="sHistory">
 				<div class="container">
 					<div class="head-wrapper">
 						<div class="row"> 
@@ -157,7 +157,7 @@
 					</div>
 					<p>DDVB насчитывает более 150 наград престижных конкурсов в&nbsp;области брендинга, дизайна и&nbsp;рекламы, а&nbsp;также ряда публикаций в&nbsp;профильных зарубежных СМИ.</p>
 				</div>
-			</section>
+			</div>
 			<!-- end sHistory-->
 			<!-- start sPorfolioSlider-->
 			<div class="sPorfolioSlider section" id="sPorfolioSlider">
