--- a/public/09-about-company.html
+++ b/public/09-about-company.html
@@ -137,7 +137,7 @@
 				</div>
 			</div>
 			<!-- start sHistory-->
-			<section class="sHistory section" id="sHistory">
+			<div class="sHistory section" id="sHistory">
 				<div class="container">
 					<div class="head-wrapper">
 						<div class="row"> 
@@ -164,7 +164,7 @@
 						</svg><span>Скачать презентацию (PDF)</span>
 					</a>
 				</div>
-			</section>
+			</div>
 			<!-- end sHistory-->
 			<!-- start sAwards-->
 			<div class="sAwards section" id="sAwards">
