--- a/public/09-about-company-2.html
+++ b/public/09-about-company-2.html
@@ -137,7 +137,7 @@
 				</div>
 			</div>
 			<!-- start sHistory-->
-			<section class="sHistory section" id="sHistory">
+			<div class="sHistory section" id="sHistory">
 				<div class="container">
 					<p>Компания была основана в&nbsp;1993 году Леонидом Фейгиным и&nbsp;Дмитрием Перышковым в&nbsp;качестве дизайн-студии, но&nbsp;уже в&nbsp;скором времени успешно трансформировалась в&nbsp;полносервисное брендинговое агентство. Мы&nbsp;сыграли заметную роль в&nbsp;развитии индустрии брендинга в&nbsp;России, и&nbsp;продолжаем оставаться драйверами развития отрасли. На&nbsp;протяжении последних десятилетий мы&nbsp;работаем с&nbsp;лидерами российской экономики: бюджет наших клиентов формирует&nbsp;10% доходной части бюджета Российской Федерации.</p>
 					<p>Особая гордость&nbsp;&mdash; это команда, которая объединяет более 40&nbsp;сильных и&nbsp;амбициозных экспертов в&nbsp;области стратегии, дизайна и&nbsp;коммуникации. Это позволяет создавать нам разные брендинговые проекты: продуктовые, корпоративные, HR, территориальные и&nbsp;др.</p>
@@ -148,7 +148,7 @@
 						</svg><span>Скачать презентацию (PDF)</span>
 					</a>
 				</div>
-			</section>
+			</div>
 			<!-- end sHistory-->
 			<!-- start sAwards-->
 			<div class="sAwards section" id="sAwards">
