--- a/public/18-contentPage.html
+++ b/public/18-contentPage.html
@@ -287,7 +287,7 @@
 						</div>
 					</div>
 					<div class="video-wrrpaer"> 
-						<iframe src="https://www.youtube.com/embed/L_LUpnjgPso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+						<iframe src="https://www.youtube.com/embed/L_LUpnjgPso" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 					</div>
 					<div class="share"><span>Поделиться</span>
 						<div class="soc">
