--- a/public/13-contacts.html
+++ b/public/13-contacts.html
@@ -141,7 +141,7 @@
 				<div class="container"> 
 					<div class="sContactMap__map">
 						<div id="map" data-mark="img/svg/map-marker.svg"></div>
-					</div><script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=" type="text/javascript"></script>
+					</div><script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey="></script>
 					<script>
 						const map = document.querySelector('#map');
 						
